- fixed links not being obvious (took underline animation from cookies consent plugin via chatgpt) - added 1rem margin top to "All rights reserved" paragraph - small fixes in spacing around links in text

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -175,6 +175,8 @@
         }
     }
     .copyright {
+        margin-top: 1rem;
+
         p{
             &::before{
                 content: '©';
